--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,30 +35,37 @@
             android:value="@string/google_maps_key" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.HomeScreenActivity"
-            android:label="Home"
+            android:label="@string/home"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.SignInActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.SignUpActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.AdvancedSearchActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.PaymentActivity"
             android:label="@string/title_activity_payment"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.DoctorSignUpActivity"
             android:label="@string/title_activity_doctor_sign_up"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.DetailsActivity"
             android:label="@string/title_activity_details"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -70,15 +77,18 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.SavedPlacesActivity"
             android:label="My Places"
             android:theme="@style/MyMaterialTheme" />
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.DoctorProfileActivity"
             android:label="@string/title_activity_doctor_profile"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <receiver
+            android:screenOrientation="portrait"
             android:name=".network.ConnectivityReceiver"
             android:enabled="true">
             <intent-filter>
@@ -87,21 +97,25 @@
         </receiver>
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.DisplaySearchPlacesActivity"
             android:label="@string/title_activity_display_search_places"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.AddPlaceActivity"
             android:label="@string/title_activity_add_place"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".userInterface.activities.general.ReportMedicalPlaceActivity"
             android:label="@string/new_report"
             android:theme="@style/Theme.AppCompat.Light.Dialog" />
 
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SettingsActivity"
+            android:screenOrientation="portrait" />
 
         <activity android:name="com.example.ecss.medicalmapper.chatbot.ChatBotActivity"
             />
